--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-firebase/storage": "^14.2.2",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -18,6 +19,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
     "expo-constants": "^13.0.0",
+    "expo-dev-client": "~0.8.0",
     "expo-image-picker": "^12.0.1",
     "expo-permissions": "^13.1.0",
     "expo-status-bar": "~1.2.0",
@@ -27,9 +29,12 @@
     "react-native": "0.64.3",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
+    "react-native-floating-view": "^0.2.0",
     "react-native-image-picker": "^4.7.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-toast-message": "^2.1.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
