--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
-    "expo-constants": "^13.0.0",
-    "expo-dev-client": "~0.8.0",
+    "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.4",
     "expo-image-picker": "^12.0.1",
     "expo-permissions": "^13.1.0",
     "expo-status-bar": "~1.2.0",
