--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
-    "expo-constants": "^13.0.0",
-    "expo-dev-client": "~0.8.0",
+    "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.4",
     "expo-image-picker": "^12.0.1",
     "expo-permissions": "^13.1.0",
     "expo-status-bar": "~1.2.0",
@@ -35,7 +36,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
