--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Rent A Car",
+    "name": "rentacar",
     "slug": "RentACar",
     "version": "1.0.0",
     "orientation": "portrait",
