--- a/package.json
+++ b/package.json
@@ -10,34 +10,59 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/cameraroll": "^1.2.1",
     "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/netinfo": "7.1.3",
     "@react-native-firebase/storage": "^14.2.2",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.2.1",
+    "@stream-io/flat-list-mvcp": "^0.10.2",
     "axios": "^0.26.1",
+    "crypto": "^1.0.1",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.4",
-    "expo-image-picker": "^12.0.1",
+    "expo-document-picker": "~10.1.3",
+    "expo-file-system": "~13.1.4",
+    "expo-haptics": "~11.1.0",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-media-library": "~14.0.0",
     "expo-permissions": "^13.1.0",
+    "expo-sharing": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "firebase": "^9.6.1",
+    "idb": "^7.0.1",
+    "rand-token": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-document-picker": "^8.1.0",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-floating-view": "^0.2.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-haptic-feedback": "^1.13.1",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-image-picker": "^4.7.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-share": "^7.4.1",
+    "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6"
+    "stream-chat": "^6.5.1",
+    "stream-chat-expo": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
