--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-image-picker": "^4.7.0",
     "react-native-image-resizer": "^1.4.5",
+    "react-native-maps": "^0.31.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -62,7 +63,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "stream-chat": "^6.5.1",
-    "stream-chat-expo": "^4.5.0"
+    "stream-chat-expo": "^4.5.0",
+    "expo-location": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
