--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-haptics": "~11.1.0",
     "expo-image-manipulator": "~10.2.0",
     "expo-image-picker": "~12.0.1",
+    "expo-location": "~14.0.1",
     "expo-media-library": "~14.0.0",
     "expo-permissions": "^13.1.0",
     "expo-sharing": "~10.1.0",
@@ -44,7 +45,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-document-picker": "^8.1.0",
-    "react-native-dropdown-picker": "^5.3.0",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-floating-view": "^0.2.0",
     "react-native-fs": "^2.20.0",
@@ -54,6 +55,7 @@
     "react-native-image-picker": "^4.7.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-maps": "^0.31.1",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -64,7 +66,7 @@
     "react-native-web": "0.17.1",
     "stream-chat": "^6.5.1",
     "stream-chat-expo": "^4.5.0",
-    "expo-location": "~14.0.1"
+    "@stripe/stripe-react-native": "0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
