--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@react-native-community/cameraroll": "^1.2.1",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/netinfo": "7.1.3",
-    "@react-native-firebase/storage": "^14.2.2",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -22,6 +21,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.2.1",
     "@stream-io/flat-list-mvcp": "^0.10.2",
+    "@stripe/stripe-react-native": "0.2.3",
     "axios": "^0.26.1",
     "crypto": "^1.0.1",
     "expo": "~44.0.0",
@@ -35,6 +35,7 @@
     "expo-location": "~14.0.1",
     "expo-media-library": "~14.0.0",
     "expo-permissions": "^13.1.0",
+    "expo-print": "^11.2.0",
     "expo-sharing": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
@@ -65,8 +66,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "stream-chat": "^6.5.1",
-    "stream-chat-expo": "^4.5.0",
-    "@stripe/stripe-react-native": "0.2.3"
+    "stream-chat-expo": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
