--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
   "name": "rentacar",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/cameraroll": "^1.2.1",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/netinfo": "7.1.3",
+    "@react-native-community/slider": "^4.2.2",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.2.1",
+    "@sharcoux/slider": "^6.0.3",
     "@stream-io/flat-list-mvcp": "^0.10.2",
     "@stripe/stripe-react-native": "0.2.3",
+    "@woonivers/react-native-document-scanner": "^2.1.1",
     "axios": "^0.26.1",
     "crypto": "^1.0.1",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
     "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.4",
     "expo-document-picker": "~10.1.3",
@@ -37,6 +41,7 @@
     "expo-permissions": "^13.1.0",
     "expo-print": "^11.2.0",
     "expo-sharing": "~10.1.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "firebase": "^9.6.1",
@@ -59,12 +64,15 @@
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-scanbot-sdk": "^4.13.0",
     "react-native-screens": "~3.10.1",
     "react-native-share": "^7.4.1",
     "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-uuid": "^2.0.1",
+    "react-native-walkthrough-tooltip": "^1.3.1",
     "react-native-web": "0.17.1",
+    "rn-cascade-picker": "^1.1.5",
     "stream-chat": "^6.5.1",
     "stream-chat-expo": "^4.5.0"
   },
